fixed output clipping top

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -8,13 +8,14 @@
 
   display: grid;
   grid-template-rows: 20px 1fr 20px;
-  align-items: center;
+  align-items: end;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
   font-family: var(--font-geist-sans);
   position: relative;
+  background-color: #0A0A0A;
+  max-height: 100%;
+  overflow-y: auto;
 }
 
 .main {
@@ -23,12 +24,11 @@
   align-items: center;
   gap: 6px;
   grid-row-start: 2;
-  position: absolute;
-  bottom: 25px;
+  max-height: 100%;
 }
 
 .paper {
-  max-height: 40vh;
+  max-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,6 +44,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 20px 15px 20px 15px;
+  border-radius: 15%;
 }
 
 .row {
